<resources>
    <string name="app_name">Transit</string>
    <string name="Title">Transit</string>
    <string name="description">Simplified Ticketing System</string>


    <!-- Strings for OnBoarding Screen -->

    <!-- Titles -->
    <string name="first_title">Create Account</string>
    <string name="second_title">Top Up the Account</string>
    <string name="third_title">Scan the QR code</string>


    <!-- Description -->
    <string name="first_desc">Register to the app by simply providing the personal inforamation and use the transit service.</string>
    <string name="second_desc">Recharge the account easily with a credit card.</string>
    <string name="third_desc">Just scan the QR code and travel where ever you need.</string>


    <!-- Buttons -->
    <string name="skip_btn">Skip</string>>
    <string name="next_btn">Next</string>
    <string name="get_started_btn">Lets Get Started</string>
    <string name="login">Login</string>


    <string name="enter_username">Enter Username</string>
    <string name="enter_pwd">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_pwd">Forget Password</string>
    <string name="create_account_btn">Create Account</string>
    <string name="create_account">Create\nAccount</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="pwd">Password</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_age">Select Your Age</string>
    <string name="choose_country">Choose Country</string>
    <string name="signup">Sign Up</string>
    <string name="code">Co\nde</string>
    <string name="verification">Verification</string>
    <string name="verification_desc">Enter the code sent on mobile</string>
    <string name="verify_code">Verify Code</string>
    <string name="forget_pwd_details">Provide the Email for which you want to reset the password!</string>
    <string name="make_selection">Select the contact detail which should use to reset the password</string>
    <string name="make_selection_title">Make Selection</string>
    <string name="via_sms">via sms:</string>
    <string name="via_mail">via mail:</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credential_details">Your Identity has been verified! Set your new password</string>
    <string name="new_pwd">New Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="pwd_updated">Password Updated</string>
    <string name="pwd_update_success">Your Password has been updated!</string>
    <string name="id_passport">ID / Passport No</string>
    <string name="dashboard">Dashboard</string>
    <string name="payment">Payment</string>
    <string name="qr_code">QR Code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Test</string>
    <string name="qr_desc">Scan the QR Code to the scanner</string>
    <string name="payment_desc">You can use credit card or Google Pay account for payments</string>
    <string name="card_payment">Card Payment</string>
    <string name="pay_with">Pay With</string>
    <string name="balance">Balance :</string>
    <string name="rs">Rs.</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="pay">Pay</string>
    <string name="acc_type">Account Type :</string>
    <string name="zero">0</string>
    <string name="journey">Journey :</string>
    <string name="your_journey">Your Journey</string>
    <string name="price">Price :</string>
    <string name="date">Date :</string>
    <string name="addCard">Add Card</string>
    <string name="addCard_details">Add Card Details</string>
    <string name="card_no">Card Number</string>
    <string name="add_payment">Add Payment</string>
    <string name="expire_date">Expire Date</string>
    <string name="cvc">CVC</string>
    <string name="save">SAVE</string>
    <string name="card_number"> Card No : </string>
    <string name="select_card">Select Card</string>
    <string name="default_journey"> No Journey details yet. </string>
    <string name="card_holder_name">Card Holder\'s Name</string>


</resources>