<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpSecond"
    android:background="@color/colorMainBackground"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/colorBlack"
            android:textSize="40sp"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:layout_marginTop="40dp"
            android:transitionName="transition_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_gender"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorBlack"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_age"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"/>



        </LinearLayout>

        <Button
            android:id="@+id/signup_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:background="@color/colorBlack"
            android:layout_marginTop="20dp"
            android:onClick="callNextSignupScreen"
            android:textColor="@color/colorWhite"
            android:elevation="5dp"
            android:transitionName="transition_next"/>

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="#00000000"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/muli"
            android:elevation="5dp"
            android:transitionName="transition_login"/>

    </LinearLayout>
</ScrollView>