<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".AddPayment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/add_payment"
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/muli"
            android:text="@string/balance"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/rupee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/rs"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/payment_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/rupee"
                android:fontFamily="@font/muli"
                android:text="@string/zero"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pay_amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/enter_amount"
                app:boxStrokeColor="@color/colorBlack"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:inputType="number"
                    android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                app:ms_hint="@string/select_card"
                android:hint="@string/select_card"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/pay_amount"
                app:ms_padding_left="0dp"
                app:ms_background_color="@color/colorLightDark"/>

        </RelativeLayout>

        <Button
            android:id="@+id/pay_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorMainBackground"
            android:text="@string/pay" />

    </LinearLayout>

</LinearLayout>