<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/journeys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@color/colorMainBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/journey_card"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_light"
                android:layout_marginLeft="20dp"
                android:text="@string/journey"
                android:layout_marginTop="15dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/journey_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/test"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/price_desc"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/journey_card"
                android:fontFamily="@font/comfortaa_light"
                android:layout_marginLeft="20dp"
                android:text="@string/price"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/journey_price"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_below="@id/journey_desc"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/zero"
                android:textSize="18sp" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_desc"
                android:fontFamily="@font/comfortaa_light"
                android:layout_marginLeft="20dp"
                android:text="@string/date"
                android:layout_marginBottom="20dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/journey_date"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_below="@id/journey_price"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/zero"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>