<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PayWithGoogle"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/colorWhite"
    android:layout_gravity="center">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pay"
                android:layout_toRightOf="@+id/title" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="-35dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/pay_with"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/balance"
                android:fontFamily="@font/muli"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/rupee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/rs"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="110dp"
                android:fontFamily="@font/muli"/>

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/test"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/rupee"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/muli"/>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gpay_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_amount"
                app:hintTextColor="@color/colorBlack"
                app:boxStrokeColor="@color/colorBlack"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                android:layout_marginTop="60dp"
                app:endIconTint="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/colorBlack"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/pay_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/pay"
                android:background="@color/colorMainBackground"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>