<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.SetNewPassword"
    android:background="@color/colorWhite"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_back_26"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/log_in"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_credentials"
            android:textSize="40sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/muli_black"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_credential_details"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/muli"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="40dp"
            app:boxBackgroundColor="@color/colorLightWhite"
            android:hint="@string/new_pwd"
            android:textColorHint="@color/colorBlack"
            app:startIconDrawable="@drawable/icons8_lock_26"
            app:startIconTint="@color/colorBlack"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorBlack"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/colorLightWhite"
            android:hint="@string/confirm_pwd"
            android:textColorHint="@color/colorBlack"
            app:startIconDrawable="@drawable/icons8_lock_26"
            app:startIconTint="@color/colorBlack"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorBlack"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMainBackground"
            android:layout_marginTop="20dp"
            android:text="@string/ok"/>

    </LinearLayout>

</ScrollView>