<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".CardPayment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:text="@string/card_payment"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <LinearLayout
                android:id="@+id/card_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:orientation="vertical" />

        </ScrollView>

        <Button
            android:id="@+id/btn_add_card"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/yellow_circle"
            android:drawableLeft="@drawable/ic_baseline_add_24"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/addCard" />

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/yellow_circle"
            android:gravity="center"
            android:text="@string/add_payment" />
    </LinearLayout>


</LinearLayout>